--- a/ShareMe/app/src/main/res/layout/list_item_person.xml
+++ b/ShareMe/app/src/main/res/layout/list_item_person.xml
@@ -21,8 +21,8 @@
 
         <ImageView
             android:id="@+id/iv_image"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
             android:background="@drawable/ic_placeholder"
             android:scaleType="centerCrop" />
     </com.google.android.material.card.MaterialCardView>
@@ -67,91 +67,50 @@
                     android:text="Host Name"
                     android:textColor="@color/title_color"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/card_storage_count"
+                    app:layout_constraintEnd_toStartOf="@+id/iv_right_arrow"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <RatingBar
-                    android:id="@+id/rating_host"
-                    style="?android:attr/ratingBarStyleSmall"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tv_usable_time_count"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:numStars="5"
-                    android:rating="3.5"
+                    android:layout_marginTop="2dp"
+                    android:text="Can afford: ~ 99 min"
+                    android:textColor="@android:color/darker_gray"
+                    app:layout_constraintEnd_toStartOf="@+id/iv_right_arrow"
                     app:layout_constraintStart_toStartOf="@+id/tv_host_name"
                     app:layout_constraintTop_toBottomOf="@+id/tv_host_name" />
 
-                <TextView
-                    android:id="@+id/tv_rating_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="(33)"
-                    android:textColor="@android:color/darker_gray"
-                    app:layout_constraintBottom_toBottomOf="@+id/rating_host"
-                    app:layout_constraintStart_toEndOf="@+id/rating_host"
-                    app:layout_constraintTop_toTopOf="@+id/rating_host" />
+                <!--                <RatingBar-->
+                <!--                    android:id="@+id/rating_host"-->
+                <!--                    style="?android:attr/ratingBarStyleSmall"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginTop="8dp"-->
+                <!--                    android:layout_marginEnd="16dp"-->
+                <!--                    android:numStars="5"-->
+                <!--                    android:rating="3.5"-->
+                <!--                    app:layout_constraintStart_toStartOf="@+id/tv_host_name"-->
+                <!--                    app:layout_constraintTop_toBottomOf="@+id/tv_host_name" />-->
+
+                <!--                <TextView-->
+                <!--                    android:id="@+id/tv_rating_count"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginStart="8dp"-->
+                <!--                    android:text="(33)"-->
+                <!--                    android:textColor="@android:color/darker_gray"-->
+                <!--                    app:layout_constraintBottom_toBottomOf="@+id/rating_host"-->
+                <!--                    app:layout_constraintStart_toEndOf="@+id/rating_host"-->
+                <!--                    app:layout_constraintTop_toTopOf="@+id/rating_host" />-->
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/rating_host" />
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/card_storage_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="16dp"
-                    app:cardBackgroundColor="@color/black_50"
-                    app:cardCornerRadius="6dp"
-                    app:cardElevation="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/iv_right_arrow"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:orientation="horizontal"
-                        android:paddingTop="6dp"
-                        android:paddingBottom="6dp">
-
-                        <TextView
-                            android:id="@+id/tv_storage_count"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="4dp"
-                            android:includeFontPadding="false"
-                            android:maxLength="4"
-                            android:maxLines="1"
-                            android:text="9999"
-                            android:textAlignment="center"
-                            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-                            android:textColor="@color/title_color"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_time_metric"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:includeFontPadding="false"
-                            android:maxLines="1"
-                            android:text="m"
-                            android:textAlignment="center"
-                            android:textAllCaps="false"
-                            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
-                            android:textColor="@color/title_color"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </com.google.android.material.card.MaterialCardView>
+                    app:layout_constraintTop_toBottomOf="@+id/tv_usable_time_count" />
 
                 <ImageView
                     android:id="@+id/iv_right_arrow"
@@ -163,7 +122,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:tint="@android:color/darker_gray" />
-
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
