--- a/ShareMe/app/src/main/res/values/themes.xml
+++ b/ShareMe/app/src/main/res/values/themes.xml
@@ -25,10 +25,10 @@
         <item name="android:insetBottom">0dp</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetRight">0dp</item>
-        <item name="cornerRadius">12dp</item>
+        <item name="cornerRadius">10dp</item>
         <item name="iconGravity">textStart</item>
         <item name="elevation">0dp</item>
-        <item name="backgroundTint">@color/white</item>
+        <item name="backgroundTint">@color/purple_50</item>
         <item name="iconTint">@color/purple_500</item>
         <item name="android:stateListAnimator">@null</item>
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
