--- a/ShareMe/app/src/main/res/values/themes.xml
+++ b/ShareMe/app/src/main/res/values/themes.xml
@@ -19,6 +19,9 @@
         <item name="cornerSize">24dp</item>
     </style>
 
+<!--    <item name="android:foreground">?android:attr/selectableItemBackground</item>-->
+<!--    <item name="strokeWidth">1dp</item>-->
+<!--    <item name="strokeColor">@color/purple_200</item>-->
     <style name="Widget.App.Button.IconOnly" parent="Widget.MaterialComponents.Button">
         <item name="iconPadding">0dp</item>
         <item name="android:insetTop">0dp</item>
@@ -28,10 +31,11 @@
         <item name="cornerRadius">10dp</item>
         <item name="iconGravity">textStart</item>
         <item name="elevation">0dp</item>
-        <item name="backgroundTint">@color/purple_50</item>
-        <item name="iconTint">@color/purple_500</item>
         <item name="android:stateListAnimator">@null</item>
-        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+        <item name="backgroundTint">@color/purple_50</item>
+        <item name="background">@color/purple_500</item>
+        <item name="iconTint">@color/purple_500</item>
+        <item name="rippleColor">@color/purple_200</item>
     </style>
 
     <style name="BottomSheetButtonStyle">
